--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
         </section>
         <footer>
-           <p>Read more about A.p.j Abdul Kalam on <a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam">wikipedia.</a></p>
+           <p>Read more about A.P.j Abdul Kalam on <a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam">wikipedia.</a></p>
         </footer>
     </div>
 </body>
